<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Zippie</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="content_description_image">Image</string>
    
    <!-- Introduce resource string -->
    <string name="introduce_skip_text_str"><u>Skip</u></string>
    <!-- End introduce -->
    
    <!-- Top menu resources string -->
    <string name="topmenu_header_text_point_str">Your points:</string>
    <string name="topmenu_premium_call_text_str">Premium Call</string>
    <string name="topmenu_egift_text_str">Egift</string>
    <string name="topmenu_money_transfer_text_str">Money Transfer</string>
    <string name="topmenu_points_text_str">Points</string>
    <string name="topmenu_pay_bill_text_str">Pay Bill</string>
    <string name="topmenu_top_up_text_str">Top Up</string>
    <string name="topmenu_contacts_str">Contacts</string>
    <string name="topmenu_message_str">Message</string>
    <string name="topmenu_call_str">Call</string>
    <string name="topmenu_learn_more_str"><u>learn more...</u></string>
    <!-- End top menu -->
    
    <!-- Welcome resources string-->
    <string name="signup_welcome_privacy_str">© 2014 Zippie. </string>
    <string name="signup_welcome_slogan_tr">Free messages and calls to Zippie users \nSend a eGift to your loved one.\n What are you waiting for?</string>
    <string name="signup_welcome_button_start_str">Start</string>
    <!-- End welcome -->
    
    <!--Contact resource string -->
    <string name="contact_zippie_str">Zippie</string>
    <string name="contact_all_str">All</string>
    <string name="contact_favorites_str">Favorites</string>
    <string name="contact_search_str">Search</string>
    <string name="contact_invite_str">Invite</string>
    <string name="contact_name_str">Andy Code</string>
    <string name="contact_search_hint_str">Please input text</string>
    <string name="contact_detail_voicecall_str">Voice</string>
    <string name="contact_detail_videocall_str">Video</string>
    <string name="contact_detail_sms_str">Message</string>
    <string name="contact_detail_premium_str">Premium Call</string>
    <string name="contact_detail_egift_str">eGift</string>
    <string name="contact_detail_money_transfer_str">Money Transfer</string>
    <string name="contact_detail_pay_bill_str">Pay Bill</string>
    <string name="contact_detail_topup_str">Top Up</string>
    <string name="contact_detail_menu_center_str">2X</string>
	<!-- End contact -->    

    <!-- Create profile resources string -->
    <string name="createprofile_finish_text_str">Finish</string>
    <string name="createprofile_add_photo_text_str">
        <u>Add photo</u></string>
    <string name="createprofile_hint_name_str">Enter your name</string>
    <string name="createprofile_hint_email_str">Enter email (optional)</string>
    <string name="createprofile_text_face_str">Use Facebook Info</string>
    <string name="createprofile_logo_face_str">f</string>
    <string name="createprofile_or_str">or</string>
    <string name="createprofile_action_bar_title_str">CREATE YOUR PROFILE</string>
    <string name="createprofile_face_app_id">1484204058532237</string>
    <!-- End create profile -->
    
    <!-- Input number -->
    <string name="signup_title_input_number_str">LET US KNOW ABOUT YOU</string>
	<string name="signup_text_show_str">Enter your phone number</string>
	<string name="signup_name_country_str">United States</string>
	<string name="signup_phone_number_str">+1</string>
	<string name="signup_button_continue_tr">Continue</string>
	
	<!-- Dialog choose name country -->
	<string name="signup_dialog_country_title_str">Title</string>
	<string name="signup_dialog_country_hint_str">Please input text</string>
	
	<!-- Verify code -->
	<string name="signup_title_verify_screen_str">DID YOU RECEIVE OUR TEXT?</string>
	<string name="signup_resend_code_str">Resend new code</string>
	<string name="signup_button_verify_str">Verify</string>
	<string name="signup_text_show_verify_str">Please enter verification code from text message send to</string>
	<string name="signup_verify_code_str">Enter verification code</string>

     <!-- Sign up auto verify -->
    <string name="signup_auto_verify_header_title_str">VERIFYING YOUR CODE&#8230;</string>
    <string name="signup_auto_verify_notify_str">Please wait for a while&#8230;</string>
    <string name="signup_auto_verify_start_over_str"><u>Start Over</u></string>
	
    <!-- Custom dialog -->
    <string name="custom_dialog_title_str">Title</string>
    <string name="custom_dialog_content_str">Content</string>
    <string name="custom_dialog_button_yes_str">OK</string>
    <string name="custom_dialog_button_no_str">Cancel</string>
    <string name="custom_dialog_title_confirm_str">Confirm Dialog</string>
    <string name="custom_dialog_title_alert_str">Alert Dialog</string>
    
    
</resources>
