<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/edit_name"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#fff"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#d1d5d0" >

        <ImageView
            android:id="@+id/custom_dialog_alert_icon_id"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:contentDescription="@string/content_description_image"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/custom_dialog_alert_title_id"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/custom_dialog_alert_icon_id"
            android:padding="10dp"
            android:text="@string/custom_dialog_title_str"
            android:textSize="@dimen/text_size_60_point" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#07c" />

    <TextView
        android:id="@+id/custom_dialog_alert_content_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/custom_dialog_content_str" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#07c" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/custom_dialog_alert_button_yes_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custom_dialog_button_yes_str" />

        <Button
            android:id="@+id/custom_dialog_alert_button_no_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/custom_dialog_alert_button_yes_id"
            android:text="@string/custom_dialog_button_no_str" />
    </RelativeLayout>

</LinearLayout>