<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res/com.lunextelecom.zippie"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">
    
    <!-- Header -->
    <include android:id="@+id/createprofile_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height_size"
        android:layout_alignParentTop="true"
        layout="@layout/signup_header_lay"/>
    
    <LinearLayout
        android:id="@+id/createprofile_top_layout_id"
        android:layout_below="@+id/createprofile_header"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:weightSum="7"
        android:orientation="vertical">
        
        <LinearLayout android:id="@+id/createprofile_button_face_id"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:background="@drawable/createprofile_background_button_facebook_dra">
            <TextView android:id="@+id/createprofile_logo_face_text_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_128_point"
                android:textStyle="bold"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:text="@string/createprofile_logo_face_str"/>
            <View 
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#6379b2"/>
            <TextView android:id="@+id/createprofile_text_face_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="@dimen/text_size_72_point"
                android:textColor="@android:color/white"
                android:text="@string/createprofile_text_face_str"/>
        </LinearLayout>
        
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:layout_weight="0.5">
            <View android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="1dp"
                android:layout_marginRight="20dp"
                android:layout_gravity="center_vertical"
                android:background="#dddddd"/>
            <TextView android:id="@+id/createprofile_or_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#666666"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:textSize="20sp"
                android:text="@string/createprofile_or_str"/>
            <View android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:background="#dddddd"/>
        </LinearLayout>
        
        <com.lunextelecom.zippie.view.CircularImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/profile_default"
            custom:border="true"
            custom:border_width="0dp"
            android:layout_weight="2.5"
            android:layout_gravity="center_horizontal"/>
        
        <TextView android:id="@+id/createprofile_add_photo_id"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.5"
            android:textSize="@dimen/text_size_60_point"
            android:textColor="@drawable/createprofile_add_photo_link_color_dra"
            android:text="@string/createprofile_add_photo_text_str"/>
        
        <EditText android:id="@+id/createprofile_name_id"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.75"
            android:hint="@string/createprofile_hint_name_str"
            android:textSize="@dimen/text_size_60_point"/>
        
        <EditText android:id="@+id/createprofile_email_id"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.75"
            android:layout_marginTop="5dp"
            android:hint="@string/createprofile_hint_email_str"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/text_size_60_point"/>
        
         <Button android:id="@+id/createprofile_finish_id"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:background="@drawable/common_button_color_default_dra"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_72_point"
            android:text="@string/createprofile_finish_text_str"/>
    </LinearLayout>
   
</RelativeLayout>
