<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fff"
    android:weightSum="1" >
	<include layout="@layout/signup_header_lay"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_margin="15dp"
        android:layout_weight="0.5"
        android:orientation="vertical" >
        

        <TextView
            android:id="@+id/signup_textshow_id"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#444444"
            android:text="@string/signup_text_show_str"
            android:textSize="20dp" />

        <LinearLayout
            android:background="@drawable/bg_down"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:paddingBottom="10dp"
            android:gravity="center_vertical" >

			<ImageView
			    android:id="@+id/signup_image_flag_id"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:paddingLeft="10dp"
			    android:src="@drawable/flag" />

            <TextView
                android:id="@+id/signup_country_name_textview_id"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup_name_country_str"
                android:textColor="#444444"
                android:layout_marginLeft="10dp"
                android:textSize="24dp" />
        </LinearLayout>

        <EditText
            android:id="@+id/signup_phone_number_edittext_id"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/signup_phone_number_str"
            android:textColor="#444444"
            android:inputType="number"
            android:lines="1"
            android:textSize="42dp" >
            <requestFocus />
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <Button
                android:id="@+id/signup_button_continue_id"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_margin="15dp"
                android:background="@drawable/common_button_color_default_dra"
                android:text="@string/signup_button_continue_tr"
                android:textSize="24dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textColor="#fff" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>